[package]
name = "ifstat-rs"
version = "1.9.999"
authors = ["spezifisch <spezifisch+JOKING@gmail.com>"]
edition = "2021"
description = "A tool to report network interface statistics."
repository = "https://github.com/spezifisch/ifstat-rs"
license = "MIT"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
log = "0.4.22"
env_logger = "0.11.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
] }

[build-dependencies]
vergen = { version = "8.3.2", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
] }
anyhow = "1.0.86"

[dev-dependencies]
assert_cmd = "2.0.15"
predicates = "3.1.2"
